# breast-cancer-gnn

./: .gitignore  README.md  pyproject.toml
breast_cancer_gnn/data/graph_data/: README.md
breast_cancer_gnn/data/input_data/: README.md
breast_cancer_gnn/data/processed_data/: README.md
breast_cancer_gnn/models/: trained_model.pt
breast_cancer_gnn/notebooks/: breast_cancer_gnn.ipynb
