[project]
name = "breast-cancer-gnn"
version = "0.1.0"
description = "A breast cancer classification using graph neural networks"
authors = [
    {name = "Mahdi Sarhangi",email = "mahdi.sarhangi78@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.0.0,<4.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "numpy (>=1.21.0,<2.0.0)",
    "pandas (>=1.3.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "torch (>=1.9.0,<2.5.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "torch-geometric (>=2.0.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
